fix filters z-index

--- a/client/src/pages/public/Projects/Filters.scss
+++ b/client/src/pages/public/Projects/Filters.scss
@@ -10,19 +10,19 @@ $animation-time: 0.4s;
 	margin: $base-margin / 2;
 
 	&:nth-child(1) {
-		z-index: 10;
+		z-index: 100;
 	}
 	&:nth-child(2) {
-		z-index: 9;
+		z-index: 99;
 	}
 	&:nth-child(3) {
-		z-index: 8;
+		z-index: 98;
 	}
 	&:nth-child(4) {
-		z-index: 7;
+		z-index: 97;
 	}
 	&:nth-child(5) {
-		z-index: 6;
+		z-index: 96;
 	}
 }
 
